network-policy/app-service-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service-a
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: app-service-a
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-service-a
    spec:
      containers:
        - name: nginx
          image: nginx:1.23-alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-templates
              mountPath: /etc/nginx/templates
      volumes:
        - name: nginx-templates
          configMap:
            name: app-service-a-nginx-templates
