network-policy/app-service-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-a
spec:
  selector:
    app.kubernetes.io/name: app-service-a
  ports:
    - name: http
      port: 80
      targetPort: http
