network-policy/app-service-a/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-service-a
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: app-service-a
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: app-service-b
          podSelector:
            matchLabels:
              app.kubernetes.io/name: app-service-b
      ports:
        - port: 80
          protocol: TCP
